apps/base/media/radarr4k/radarr4k-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: radarr4k-ingressroute
  namespace: media
  annotations:
    gethomepage.dev/href: "https://radarr4k.lab.mainertoo.com"
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "Radarr 4K"
    gethomepage.dev/description: "Movie organizer/manager (4K)"
    gethomepage.dev/app: radarr4k
    gethomepage.dev/group: "Media"
    gethomepage.dev/icon: "https://cdn.jsdelivr.net/gh/selfhst/icons/svg/radarr.svg"
spec:
  entryPoints:
    - websecure
    - web
  routes:
    - match: Host(`radarr4k.lab.mainertoo.com`)
      kind: Rule
      middlewares:
        - name: authentik-sso
          namespace: traefik-system
      services:
        - name: radarr4k
          port: 7878
  tls: {}
